environments/staging/centralus/apps/logging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: elasticsearch
  namespace: elastic-system
spec:
  rules:
  - host: elasticsearch.tools.com
    http:
      paths:
      - backend:
          serviceName: quickstart-es-http
          servicePort: 9200
        path: /
